# lixbackups

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac  genmanpages  setup.sh
.github/: dependabot.yml
.github/workflows/: build-test.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
conffiles/: Makefile  Makefile.am  Makefile.in
m4/: .gitignore
manpages/: Makefile  Makefile.am  Makefile.in  attbckshare.1  attbckshare.sh.1  bckdatadaily.1  bckdatadaily.sh.1  bckfulladhoc.1  bckfulladhoc.sh.1  bckfullweekly.1  bckfullweekly.sh.1  bckincdaily.1  bckincdaily.sh.1  chkbckshare.1  detbckshare.1  detbckshare.sh.1
manpages/manpagessrc/: attbckshare.1.txt  bckdatadaily.1.txt  bckdatadaily.sh.1.txt  bckfullweekly.1.txt  bckfullweekly.sh.1.txt  bckincdaily.1.txt  bckincdaily.sh.1.txt  chkbckshare.1.txt  detbckshare.1.txt  detbckshare.sh.1.txt
manpagessrc/: attbckshare.sh.1.txt  bckfulladhoc.1.txt  bckfulladhoc.sh.1.txt  bckincdaily.1.txt
scripts/: Makefile  Makefile.am  Makefile.in  attbckshare  attbckshare.sh  bckdatadaily  bckdatadaily.sh  bckfulladhoc  bckfulladhoc.sh  bckfullweekly  bckfullweekly.sh  bckincdaily  bckincdaily.sh  chkbckshare  detbckshare  detbckshare.sh
scripts/scriptssrc/: attbckshare.in  attbckshare.sh.in  bckdatadaily.in  bckdatadaily.sh.in  bckfulladhoc.in  bckfulladhoc.sh.in  bckfullweekly.in  bckfullweekly.sh.in  bckincdaily.in  bckincdaily.sh.in  chkbckshare.in  detbckshare.in  detbckshare.sh.in  setup.sh.in
scripts/scriptssrc/.svn/: all-wcprops  dir-prop-base  entries
scripts/scriptssrc/.svn/text-base/: attbckshare.in.svn-base  bckincdaily.in.svn-base
source/conf/etc/: Makefile.am  bcksystem.exclude.in
source/conf/rootetc/: Makefile.am
source/conf/rootetc/logrotate/: Makefile.am
source/man/man1/: Makefile.am  detbckshare.1.man.in
source/man/man5/: Makefile.am  backups.conf.5.man.in  bckdaily.exclude.5.man.in  bckseldaily.exclude.5.man.in  bckseldaily.exclude.5.txt  bckseldaily.files.5.man.in  bcksystem.exclude.5.man.in  bckweekly.exclude.5.man.in  bckweekly.exclude.5.txt
source/man/man8/: Makefile.am  attbckshare.8.man.in  chkbckshare.8.man.in  detbckshare.8.man.in  netbckup.8.man.in
source/progs/bash/: Makefile.am  attbckshare.in  attbckshare.sh.in  chkbckshare.in  chkbckshare.sh.in  detbckshare.in  detbckshare.sh.in  netbckup.in  netbckup.sh.in  setup.sh.in
src/bash-comp/: Makefile.am  Makemodule.am  attbckshare.sh.in  chkbckshare.sh.in  detbckshare.sh.in  netbckup.sh.in
src/conf/etc/: Makefile.am  bcksystem.exclude.in
src/conf/rootetc/: Makefile.am
src/conf/rootetc/logrotate/: Makefile.am  lixbackups.in
src/conffiles/: Makefile.am  bcksystem.exclude
src/man/5/: Makefile.am  backups.conf.5.man.in  bckdaily.exclude.5.man.in  bckseldaily.exclude.5.man.in  bckseldaily.files.5.man.in  bcksystem.exclude.5.man.in  bckweekly.exclude.5.man.in
src/man/8/: Makefile.am  attbckshare.8.man.in  chkbckshare.8.man.in  detbckshare.8.man.in  netbckup.8.man.in
src/man/man1/: Makefile.am  attbckshare.1.txt
src/man/man5/: Makefile.am  backups.conf.5.txt
src/manpages/: Makefile.am  bckfulladhoc.1.txt  chkbckshare.1.txt
src/manpages/man1/: Makefile.am  attbckshare.1.txt  bckdatadaily.1.txt  bckfulladhoc.1.txt  bckfullweekly.1.txt  bckincdaily.1.txt  chkbckshare.1.txt  detbckshare.1.txt  netbckup.1.txt
src/manpages/man5/: Makefile.am  backups.conf.5.txt  bckdaily.exclude.5.txt  bckdatadaily.exclude.5.txt  bckdatadaily.files.5.txt  bckfullweekly.exclude.5.txt  bckincdaily.exclude.5.txt  bckseldaily.exclude.5.txt  bckseldaily.files.5.txt  bcksystem.exclude.5.txt  bckweekly.exclude.5.txt  cnv2man
src/prg/bash/: Makefile.am  attbckshare.sh.in  chkbckshare.sh.in  detbckshare.sh.in  netbckup.sh.in  setup.sh.in
src/rootconffiles/: Makefile.am  lixbackups.in
src/scripts/: Makefile.am  attbckshare.in  bckdatadaily.in  bckfulladhoc.in  bckincdaily.in  chkbckshare.in  detbckshare.in  netbckup.in  setup.sh.in
